--- a/src/Components/Project/MessageBoard/MessageForm.css
+++ b/src/Components/Project/MessageBoard/MessageForm.css
@@ -1,21 +1,21 @@
 .form-container {
-    background-color: mediumslateblue;
+    background-color: #787CD1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border-radius: 1rem;
-    width: 40rem;
+    width: 30rem;
     padding: 1rem;
-    margin-top: 2rem;
     margin-bottom: 2rem;
 }
 
 .form-row {
-    width: 100%;
+    width: 150%;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
 }
